<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">

    <TextView
      android:id="@+id/wallet_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/wallet_info"
      android:textAlignment="center"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/coins_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="48dp"
    />

    <TextView 
      android:id="@+id/coins_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/coins"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/wallet_label"
      app:layout_constraintBottom_toTopOf="@+id/btn_die"
      app:layout_constraintLeft_toLeftOf="@+id/btn_die"
      app:layout_constraintRight_toRightOf="@+id/btn_die"
      app:layout_constraintHorizontal_bias="0.1"
      android:layout_marginTop="48dp"

    />
    

    <TextView 
      android:id="@+id/txt_coins"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/zero"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/wallet_label"
      app:layout_constraintBottom_toTopOf="@+id/btn_die"
      app:layout_constraintRight_toRightOf="@+id/btn_die"
      app:layout_constraintLeft_toLeftOf="@+id/btn_die"
      app:layout_constraintHorizontal_bias="0.9"
      android:layout_marginTop="48dp"
    />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_die"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/dieColor"
      android:text="@string/zero"
      android:textColor="@color/textColor"
      android:textAlignment="center"
      android:textSize="96sp"
      android:minHeight="128dp"
      android:minWidth="128dp"
      android:includeFontPadding="false"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintTop_toBottomOf="@+id/coins_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/prev_roll_label"
      android:clickable="true"
      android:onClick="onButtonClick"
    />

    <TextView 
      android:id="@+id/prev_roll_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/prev_roll"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/btn_die"
      app:layout_constraintBottom_toTopOf="@+id/single_sixes_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.1"
      android:layout_marginTop="20dp"
    />
  

    <TextView 
      android:id="@+id/txt_prev_roll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/zero"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/btn_die"
      app:layout_constraintBottom_toTopOf="@+id/txt_single_sixes"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
      android:layout_marginTop="20dp"
    />

    <TextView 
      android:id="@+id/single_sixes_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/single_sixes"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/prev_roll_label"
      app:layout_constraintBottom_toTopOf="@+id/double_sixes_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.1"
      android:layout_marginTop="48dp"
    />
  

    <TextView 
      android:id="@+id/txt_single_sixes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/zero"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/txt_prev_roll"
      app:layout_constraintBottom_toTopOf="@+id/txt_double_sixes"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
      android:layout_marginTop="48dp"
    />

    <TextView 
      android:id="@+id/double_sixes_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/double_sixes"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/single_sixes_label"
      app:layout_constraintBottom_toTopOf="@+id/double_others_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.1"
    />
  

    <TextView 
      android:id="@+id/txt_double_sixes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/zero"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/txt_single_sixes"
      app:layout_constraintBottom_toTopOf="@+id/txt_double_others"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
    />

    <TextView 
      android:id="@+id/double_others_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/double_others"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/double_sixes_label"
      app:layout_constraintBottom_toTopOf="@+id/total_rolls_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.1"
    />
  

    <TextView 
      android:id="@+id/txt_double_others"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/zero"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/txt_double_sixes"
      app:layout_constraintBottom_toTopOf="@+id/txt_total_rolls"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
    />

    <TextView 
      android:id="@+id/total_rolls_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/total_rolls"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/double_others_label"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.1"
    />
  

    <TextView 
      android:id="@+id/txt_total_rolls"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/zero"
      android:textSize="20sp"
      android:minHeight="48dp"
      app:layout_constraintTop_toBottomOf="@+id/txt_double_others"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
    />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>